Terminando rota Evento
