# eventos/routes/eventosRouter.js
@@ -4,18 +4,20 @@ const { verificarToken } = require('../middlewares/authMiddlewares.js');
 
 const router = express.Router();
 
-router.get('/', eventosController.listar);
+// ROTAS FIXAS PRIMEIRO
+router.post('/login', eventosController.entrar);
+router.post('/renovar', verificarToken, eventosController.renovar);
 
-router.get('/:id', eventosController.buscar, eventosController.exibir);
+// CRUD
+router.get('/', eventosController.listar);
 
 router.post('/', eventosController.criar);
 
-router.post('/login', eventosController.entrar);
-
-router.post('/renovar',  verificarToken, eventosController.renovar);
+// GET precisa vir antes do PUT/DELETE
+router.get('/:id', eventosController.buscar, eventosController.exibir);
 
 router.put('/:id', verificarToken, eventosController.buscar, eventosController.atualizar);
 
-router.delete('/:id', verificarToken, eventosController.remover);
+router.delete('/:id', verificarToken, eventosController.buscar, eventosController.remover);
 
 module.exports = router;
